tests/snapshots/snapshots__payment-links_list.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
List payment links (GET /v2/payment-links)

Usage: flute2 payment-links list [OPTIONS]

Options:
      --page-index <PAGE_INDEX>       Page number to fetch. Zero-based
      --page-size <PAGE_SIZE>         Maximum results per page (1-100). Omit it to use the server's default
      --all                           Fetch every page until the collection is exhausted
      --search <SEARCH>               Server-side text search
      --link-type <LINK_TYPE>         Filter by link type [possible values: multi-use, single-use]
      --status <PAYMENT_LINK_STATUS>  Filter results by status [possible values: active, completed, expired, inactive]
      --sort-by <SORT_BY>             Sort results by this field name
      --asc                           Sort ascending. With neither `--asc` nor `--desc`, results come back newest first
      --desc                          Sort descending
  -h, --help                          Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
