tests/snapshots/snapshots__payment-links_share.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Send a payment link to a customer by email or text message (POST /v2/payment-links/{paymentLinkId}/share)

Usage: flute2 payment-links share [OPTIONS] --share-by <SHARE_BY> --recipient <RECIPIENT> <PAYMENT_LINK_ID>

Arguments:
  <PAYMENT_LINK_ID>  Payment link UUID to share (positional)

Options:
      --share-by <SHARE_BY>    How to send the link: `email` or `sms` (required) [possible values: email, sms]
      --recipient <RECIPIENT>  Email address or mobile number in E.164 form to send it to (required)
      --consent                The customer has consented to receive it (required)
  -h, --help                   Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
