tests/snapshots/snapshots__payment-links_update.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Update a payment link (PATCH /v2/payment-links/{paymentLinkId}).

Omitted flags retain their existing server values; an empty value removes one outright.

Usage: flute2 payment-links update [OPTIONS] <PAYMENT_LINK_ID>

Arguments:
  <PAYMENT_LINK_ID>
          Payment link UUID to update (positional)

Options:
      --card-enabled [<CARD_ENABLED>]
          Accept card payments: `--card-enabled` or `--card-enabled false`
          
          [possible values: true, false]

      --card-processor-id <CARD_PROCESSOR_ID>
          Charge card payments through this processor

      --ach-enabled [<ACH_ENABLED>]
          Accept ACH payments: `--ach-enabled` or `--ach-enabled false`
          
          [possible values: true, false]

      --ach-processor-id <ACH_PROCESSOR_ID>
          Charge ACH payments through this processor

      --amount <AMOUNT>
          New amount to collect. Plain decimal, e.g. `100.00`

      --currency-code <CURRENCY_CODE>
          New currency code. Frozen once the link has taken a payment

      --link-type <LINK_TYPE>
          New link type: `single-use` or `multi-use`
          
          [possible values: multi-use, single-use]

      --status <PAYMENT_LINK_STATUS>
          Set the link's status, e.g. `inactive` to stop accepting payments
          
          [possible values: active, completed, expired, inactive]

      --customer-id <CUSTOMER_ID>
          Customer UUID to attach the link to

      --reference-id <REFERENCE_ID>
          New merchant-assigned reference ID

      --name <NAME>
          New merchant-facing label

      --description <DESCRIPTION>
          New merchant-internal notes

      --expires-on <EXPIRES_ON>
          New UTC expiry (ISO 8601, ending in `Z`), e.g. `2026-09-15T00:00:00Z`. Must be in the future

      --clear <FIELD>
          Clear a field back to nothing. Repeat the flag for several fields.
          
          An empty value does the same: `--description ""` and `--clear description` are one request. `name` and `currency-code` cannot be cleared and are not offered.
          
          [possible values: amount, customer-id, reference-id, description, expires-on]

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --profile <PROFILE>
          Active profile (environment). `sandbox` (default) or `production`/`prod`
          
          [env: FLUTE2_PROFILE=]

      --output <OUTPUT>
          Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table`
          
          [env: FLUTE2_OUTPUT=]
          [possible values: table, json, quiet]

      --debug
          Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
