tests/snapshots/snapshots__payment-methods.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Payment-method vault operations (list, get, add-card, add-ach, update, delete, set-default)

Usage: flute2 payment-methods [OPTIONS] <COMMAND>

Commands:
  list         List vaulted payment methods (GET /v2/payment-methods)
  get          Fetch a single payment method by ID (GET /v2/payment-methods/{paymentMethodId})
  add-card     Vault a card (POST /v2/payment-methods/cards)
  add-ach      Vault an ACH account (POST /v2/payment-methods/ach)
  update       Rename a vaulted payment method (PATCH /v2/payment-methods/{paymentMethodId})
  delete       Remove a payment method from the vault (DELETE /v2/payment-methods/{paymentMethodId})
  set-default  Make a payment method the customer's default (POST /v2/payment-methods/{paymentMethodId}/set-default)
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
