tests/snapshots/snapshots__payment-methods_add-card.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Vault a card (POST /v2/payment-methods/cards)

Usage: flute2 payment-methods add-card [OPTIONS] --card <CARD> --exp <EXP>

Options:
      --card <CARD>                Card PAN (primary account number), e.g. `4111111111111111` (required)
      --exp <EXP>                  Card expiry in MM/YY or MM/YYYY format, e.g. `12/26` (required)
      --cvv <CVV>                  Card CVV/security code
      --customer-id <CUSTOMER_ID>  Customer UUID to vault the card against
      --name <PAYMENT_NAME>        Friendly label for this payment method
  -h, --help                       Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
