tests/snapshots/snapshots__payment-methods_set-default.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Make a payment method the customer's default (POST /v2/payment-methods/{paymentMethodId}/set-default)

Usage: flute2 payment-methods set-default [OPTIONS] --customer-id <CUSTOMER_ID> <PAYMENT_METHOD_ID>

Arguments:
  <PAYMENT_METHOD_ID>  Payment method UUID (positional)

Options:
      --customer-id <CUSTOMER_ID>  Customer UUID whose default this becomes (required)
  -h, --help                       Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
